multipleingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - corebackend.harshad.shop
    - frontend.harshad.shop
    secretName: tls-secret
  rules:
  - host: corebackend.harshad.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: core-app
            port:
              number: 80
  - host: frontend.harshad.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
